using FuzzyLogic.MembershipFunctions.Base;

namespace FuzzyLogic.MembershipFunctions.Real;

public interface IRealFunction : IMembershipFunction<double>
{
}